# rust-salvo-htmx-askama-tailwind-template

./: .gitignore  Cargo.toml  README.md  build.rs  cargo-generate.toml  package-lock.json  package.json  tailwind.config.js
src/: main.rs
templates/: hello.html
